# Project-B

./: .gitignore  README.md
.github/workflows/: issue_detect.yaml  pull_request_ci.yaml  push_image.yaml  tagging.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: build.sh  ci.sh  entrypoint.sh  unit_test.sh  upcontainer.sh
src/calculator_pkg/: CMakeLists.txt  package.xml
src/calculator_pkg/include/calculator_pkg/: calculator.hpp
src/calculator_pkg/src/: calculator.cpp  main.cpp
src/calculator_pkg/test/: calculator_test.cpp
